# storage-backend

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: README.md  docker-compose.yaml  download_s3.py  storage_backend.json
src/storage_backend/: abc.py  gcs.py  http.py  local.py  s3.py  settings.py
